--- a/docs/styles/components/btn.pcss
+++ b/docs/styles/components/btn.pcss
@@ -194,7 +194,7 @@
   }
 
   --rotation: 45deg;
-  --y-offset: 11px;
+  --y-offset: 0;
   --x-offset: 7px;
 
   &__pop-left::before {
