--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -49,7 +49,7 @@
     margin-bottom: 15px;
 
     .like-btn {
-      --y-offset: 12px;
+      --y-offset: 0;
       --x-offset: 9px;
 
       width: 28px;
