--- a/src/styles/utilities/colors.pcss
+++ b/src/styles/utilities/colors.pcss
@@ -25,7 +25,11 @@
 
 .dark {
   --color-bg: var(--purplegrey);
-  --color-fg: var(--white);
+  --color-fg: var(--offwhite);
   --color-secondary-bg: var(--deeppurple);
   --color-primary-light: var(--purple2);
+
+  img {
+    filter: brightness(85%);
+  }
 }
